--- a/functions_framework/pubspec.yaml
+++ b/functions_framework/pubspec.yaml
@@ -3,9 +3,8 @@ version: 0.4.2-dev
 description: >-
   FaaS (Function as a service) framework for writing portable Dart functions
 repository: https://github.com/GoogleCloudPlatform/functions-framework-dart
-
 environment:
-  sdk: '>=2.14.0 <3.0.0'
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   args: ^2.0.0
@@ -16,6 +15,7 @@ dependencies:
   json_annotation: ^4.3.0
   meta: ^1.2.3
   shelf: ^1.2.0
+  shelf_cors_headers: ^0.1.2
   stack_trace: ^1.9.6
 
 dev_dependencies:
