--- a/functions_framework_builder/pubspec.yaml
+++ b/functions_framework_builder/pubspec.yaml
@@ -4,17 +4,21 @@ description: Builder for package:functions_framework
 repository: https://github.com/GoogleCloudPlatform/functions-framework-dart
 
 environment:
-  sdk: '>=2.14.0 <3.0.0'
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
-  analyzer: '>=2.7.0 <5.0.0'
+  analyzer: ">=2.7.0 <5.0.0"
   build: ^2.0.0
-  build_config: '>=0.4.3 <2.0.0'
+  build_config: ">=0.4.3 <2.0.0"
   collection: ^1.15.0
   dart_style: ^2.0.0
   # There is a tight version constraint because the builder has a strict
   # dependency on all features exposed.
-  functions_framework: '>=0.4.0 <0.4.2'
+  functions_framework:
+    git:
+      url: https://github.com/CoryADavis/functions-framework-dart
+      ref: main
+      path: functions_framework
   glob: ^2.0.0
   meta: ^1.2.4
   path: ^1.7.0
